//
// Created by caleb on 25/10/2025.
//

#ifndef ANTIGO_PROJETO_HOTEL_CLION_MAIN_IML_TESTSENDERECO_H
#define ANTIGO_PROJETO_HOTEL_CLION_MAIN_IML_TESTSENDERECO_H

#include "../../libs/teste/InterfaceDeTestes.hpp"
#include "Endereco.hpp"
#include <vector>
#include <string>
#include "../../libs/io/IO.hpp"

using namespace Teste;
using namespace Hotelaria;

class TesteEndereco : public InterfaceDeTeste {
public:
    void executar() override;
};

#endif //ANTIGO_PROJETO_HOTEL_CLION_MAIN_IML_TESTSENDERECO_H