//
// Created by caleb on 03/11/2025.
//

#ifndef GERENCIADOR_DE_HOTEIS_UNB_TESTSDATA_HPP
#define GERENCIADOR_DE_HOTEIS_UNB_TESTSDATA_HPP

#include <iostream>
#include "../../libs/teste/InterfaceDeTestes.hpp"

using namespace std;
using namespace Teste;
using namespace Hotelaria;

class TestesData : public InterfaceDeTeste {
public:
    void executar() override;
};


#endif //GERENCIADOR_DE_HOTEIS_UNB_TESTSDATA_HPP