@startuml
skinparam linetype ortho
skinparam packageStyle rectangle
class TestandoSmoke {
	+ void executarSmokeTest();
	}
class TesteCapacidade {
	+ void executar() override;
	}
class TesteCartao {
	+ void executar() override;
	}
class TesteCodigo {
	+ void executar() override;
	}
class TesteDinheiro {
	+ void executar() override;
	}
class TesteEmail {
	+ void executar() override;
	}
class TesteEndereco {
	+ void executar() override;
	}
class TesteNome {
	+ void executar() override;
	}
class TesteNumero {
	+ void executar() override;
	}
class TesteRamal {
	+ void executar() override;
	}
class TestesData {
	+ void executar() override;
	}
class TesteSenha {
	+ void executar() override;
	}
class TesteTelefone {
	+ void executar() override;
	}
class TesteGerente {
	+ TesteGerente()
	+ void executar() override;
	}
class TesteHospede {
	+ TesteHospede()
	+ void executar() override;
	}
class TesteHotel {
	+ TesteHotel()
	+ void executar() override;
	}
class TesteQuarto {
	+ TesteQuarto()
	+ void executar() override;
	}
class TesteReserva {
	+ TesteReserva()
	+ void executar() override;
	}
TesteCapacidade  --|> InterfaceDeTeste : Herança
TesteCartao  --|> InterfaceDeTeste : Herança
TesteCodigo  --|> InterfaceDeTeste : Herança
TesteDinheiro  --|> InterfaceDeTeste : Herança
TesteEmail  --|> InterfaceDeTeste : Herança
TesteEndereco  --|> InterfaceDeTeste : Herança
TesteNome  --|> InterfaceDeTeste : Herança
TesteNumero  --|> InterfaceDeTeste : Herança
TesteRamal  --|> InterfaceDeTeste : Herança
TestesData  --|> InterfaceDeTeste : Herança
TesteSenha  --|> InterfaceDeTeste : Herança
TesteTelefone  --|> InterfaceDeTeste : Herança
TesteGerente  --|> InterfaceDeTeste : Herança
TesteHospede  --|> InterfaceDeTeste : Herança
TesteHotel  --|> InterfaceDeTeste : Herança
TesteQuarto  --|> InterfaceDeTeste : Herança
TesteReserva  --|> InterfaceDeTeste : Herança
@enduml
